--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/svgs/favicon/part+1+p-1320568343314317876.webp" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-       
+
     <title>Portfolio Creator</title>
 </head>
 
@@ -27,7 +28,7 @@
             <a href="#projects-section">Projects</a>
             <a href="#blog-section">Blog</a>
             <a href="#introsection">Book a call</a>
-            <a href="#faq-section"><img src="./assets/svgs/arrow.svg" ></a>
+            <a href="#faq-section"><img src="./assets/svgs/arrow.svg"></a>
 
         </nav>
     </header>
@@ -40,7 +41,8 @@
             <div class="book-a-call">
                 <button>Book a call</button>
                 <a class="introsection-cv" href="./assets/pdf/cv.pdf" download>Download CV</a>
-                <a class="introsection-arrow" href="#"><img class="introsection-arrow-img" src="./assets/svgs/arrow.svg" alt="cv"></a>
+                <a class="introsection-arrow" href="#"><img class="introsection-arrow-img" src="./assets/svgs/arrow.svg"
+                        alt="cv"></a>
             </div>
         </div>
         <div class="right-side">
@@ -49,7 +51,7 @@
 
     </section>
 
-    <section class="trusted-by-companents-section" >
+    <section class="trusted-by-companents-section">
 
         <h3>Trusted by</h3>
         <div class="trusted-by-companents">
@@ -76,7 +78,10 @@
         <h1>Design that solves problems, <br> one product at a time.</h1>
         <div class="services-cards">
             <div class="service-card">
-                <div class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card1.svg" alt="service"></div></div>
+                <div class="logo-container">
+                    <div class="service-logo"><img src="./assets/svgs/services-section/service-card1.svg" alt="service">
+                    </div>
+                </div>
                 <h4>What I can do for you</h4>
                 <p>Faster, better products that your <br> users love. Here's all the services <br> I provide:</p>
                 <ul>
@@ -86,7 +91,10 @@
                 </ul>
             </div>
             <div class="service-card">
-                <div  class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card2.svg" alt="service"></div></div>
+                <div class="logo-container">
+                    <div class="service-logo"><img src="./assets/svgs/services-section/service-card2.svg" alt="service">
+                    </div>
+                </div>
                 <h4>Applications I'm fluent in</h4>
                 <p>Every designer needs the right <br> tools to do the perfect job. <br> Thankfully, I'm multilingual.
                 </p>
@@ -97,7 +105,10 @@
                 </ul>
             </div>
             <div class="service-card">
-               <div  class="logo-container"><div class="service-logo"><img src="./assets/svgs/services-section/service-card3.svg" alt="service"></div></div>
+                <div class="logo-container">
+                    <div class="service-logo"><img src="./assets/svgs/services-section/service-card3.svg" alt="service">
+                    </div>
+                </div>
                 <h4>What you can expect</h4>
                 <p>I design products that are more <br> than pretty. I make them shippable <br> and usable.</p>
                 <ul>
@@ -130,7 +141,7 @@
                     <h4>Soulful Rebrand</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" ></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg"></a>
                     </div>
                 </div>
             </div>
@@ -144,7 +155,7 @@
                     <h4>Datadash Product design</h4>
                     <div class="projects-cards-link">
                         <a class="view-project">View Project</a>
-                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg" ></a>
+                        <a class="projects-arrow" href="#"><img src="./assets/svgs/arrow.svg"></a>
                     </div>
                 </div>
 
@@ -180,7 +191,7 @@
                 <h1>Latest Blogs</h1>
                 <div class="main-blog-link">
                     <a class="view-all" href="#">View all</a>
-                    <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
+                    <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                 </div>
             </div>
             <div class="blog-right-side">
@@ -189,7 +200,7 @@
                     <h4>Design tips for designers, that cover <br> everything you need</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="">Read the article</a>
-                        <a href=""><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
+                        <a href=""><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                     </div>
                 </div>
                 <div class="article">
@@ -197,7 +208,7 @@
                     <h4>How to build rapport with your web design <br> clients</h4>
                     <div class="article-arrow">
                         <a class="view-all" href="#">Read the article</a>
-                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg" ></a>
+                        <a href="#"><img class="arrow-white" src="./assets/svgs/arrow-white.svg"></a>
                     </div>
                 </div>
                 <div class="article">
@@ -241,12 +252,15 @@
             </div>
         </div>
         <div class="product-image">
-            <div class="image-telefone"><img src="./assets/svgs/product-designer-section/designer1.svg" alt="telefone"></div>
+            <div class="image-telefone"><img src="./assets/svgs/product-designer-section/designer1.svg" alt="telefone">
+            </div>
             <div class="image-boy"><img src="./assets/svgs/product-designer-section/designer2.svg" alt="boy"></div>
             <div class="image-group">
-                <div class="image-notebook"><img src="./assets/svgs/product-designer-section/designer3.svg" alt="notebook">
+                <div class="image-notebook"><img src="./assets/svgs/product-designer-section/designer3.svg"
+                        alt="notebook">
                 </div>
-                <div class="image-girl"><img src="./assets/svgs/product-designer-section/designer4.svg" alt="girl"></div>
+                <div class="image-girl"><img src="./assets/svgs/product-designer-section/designer4.svg" alt="girl">
+                </div>
             </div>
         </div>
     </section>
@@ -334,66 +348,71 @@
                 <img src="./assets/svgs/testimonials-section/boy-img.svg" alt="">
             </div>
             <div class="testimonials-text">
-                <div class="testimon-dirnaq-container"><div class="testimon-dirnaq"><img src="./assets/svgs/testimonials-section/dirnaq.svg" alt=""></div></div>
-                <p>Jade helped us build a software so <br> intuitive that it didn't need a <br> walkthrough. He solved complex <br>
+                <div class="testimon-dirnaq-container">
+                    <div class="testimon-dirnaq"><img src="./assets/svgs/testimonials-section/dirnaq.svg" alt=""></div>
+                </div>
+                <p>Jade helped us build a software so <br> intuitive that it didn't need a <br> walkthrough. He solved
+                    complex <br>
                     problems with brilliant design.</p>
-                    <div class="john-side-arrow">
-                        <div>
-                          <h6>John Frankin</h6>
-                          <span class="founder">Founder, Double Bunch</span>
-                       </div>
-                       <div class="testimonials-arrow">
-                        <span class="material-symbols-outlined"><img src="./assets/svgs/testimonials-section/arrow-left.svg" alt=""> </span>
-                        <span class="material-symbols-outlined"><img src="./assets/svgs/testimonials-section/arrow-right.svg" alt=""> </span>
-                        
-                       </div>
+                <div class="john-side-arrow">
+                    <div>
+                        <h6>John Frankin</h6>
+                        <span class="founder">Founder, Double Bunch</span>
                     </div>
+                    <div class="testimonials-arrow">
+                        <span class="material-symbols-outlined"><img
+                                src="./assets/svgs/testimonials-section/arrow-left.svg" alt=""> </span>
+                        <span class="material-symbols-outlined"><img
+                                src="./assets/svgs/testimonials-section/arrow-right.svg" alt=""> </span>
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <footer class="faq-section" id="faq-section">
-       <div class="faq-part">
-        <h4>FAQ</h4>
-        <p>Frequently asked questions</p>
-       </div>
+        <div class="faq-part">
+            <h4>FAQ</h4>
+            <p>Frequently asked questions</p>
+        </div>
         <div class="faq-section-companents">
-         <div class="companent-part">
-            <div>
-                <h3>What type of projects do you take on?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+            <div class="companent-part">
+                <div>
+                    <h3>What type of projects do you take on?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What is your hourly rate?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What time-zone do you work in?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What is the typical timeline for a project?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
             </div>
-            <div>
-                <h3>What is your hourly rate?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+            <div class="companent-part">
+                <div>
+                    <h3>How do you charge for projects ?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What does your design process look like?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What metrics do you use to measure success?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
+                <div>
+                    <h3>What if I need help after the project is complete?</h3>
+                    <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
+                </div>
             </div>
-            <div>
-                <h3>What time-zone do you work in?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-            <div>
-                <h3>What is the typical timeline for a project?</h3> 
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-         </div>
-         <div class="companent-part">
-            <div>
-                <h3>How do you charge for projects ?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-            <div>
-                <h3>What does your design process look like?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-            <div>
-                <h3>What metrics do you use to measure success?</h3>
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-            <div>
-                <h3>What if I need help after the project is complete?</h3> 
-                <a class="companent-arrow" href=""><img src="./assets/svgs/faq-section/arrow.svg" alt=""></a>
-            </div>
-         </div>
         </div>
 
         <div class="ready-section">
@@ -402,47 +421,47 @@
                 <h2>Let's get on a call.</h2>
             </div>
             <div class="ready-logo-about">
-               <div class="ready-logo-part">
-                <img src="./assets/svgs/ready-logo/logo.svg" alt="portfolio creator">
-                <h6>4353 Delaware Avenue, San Francisco, USA</h6>
-                   <div class="adress">
-                       <img src="./assets/svgs/ready-logo/mail.svg" alt=""> 
-                       <span>hi@thefolio.com</span>
-                   </div>
-               </div>
-               <div class="ready-about-part">
-                <ul>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Dribbble</li>
-                </ul>
-                <ul>
-                    <li>Services</li>
-                    <li>Blog</li>
-                    <li>Instagram</li>
-                </ul>
-                <ul>
-                    <li>Experience</li>
-                    <li>Projects</li>
-                    <li>Twitter</li>
-                </ul>
-               </div>
-             </div>
+                <div class="ready-logo-part">
+                    <img src="./assets/svgs/ready-logo/logo.svg" alt="portfolio creator">
+                    <h6>4353 Delaware Avenue, San Francisco, USA</h6>
+                    <div class="adress">
+                        <img src="./assets/svgs/ready-logo/mail.svg" alt="">
+                        <span>hi@thefolio.com</span>
+                    </div>
+                </div>
+                <div class="ready-about-part">
+                    <ul>
+                        <li>About</li>
+                        <li>Contact</li>
+                        <li>Dribbble</li>
+                    </ul>
+                    <ul>
+                        <li>Services</li>
+                        <li>Blog</li>
+                        <li>Instagram</li>
+                    </ul>
+                    <ul>
+                        <li>Experience</li>
+                        <li>Projects</li>
+                        <li>Twitter</li>
+                    </ul>
+                </div>
+            </div>
         </div>
- <div class="footer">
-       <div>
-         <a href="#">© All rights reserved.</a>
-         <a href="#">Sumit Hegde</a>
-         <a href="#">. Powered by</a>
-         <a>Webflow</a>
-       </div>
-       <div>
-         <a href="#">/ Image License Info</a>
-         <a href="#">/ Instructions</a>
-         <a href="#">/ Changelog</a>
-         <a href="#">/ Style Guide</a>
-      </div>
- </div>
+        <div class="footer">
+            <div>
+                <a href="#">© All rights reserved.</a>
+                <a href="#">Sumit Hegde</a>
+                <a href="#">. Powered by</a>
+                <a>Webflow</a>
+            </div>
+            <div>
+                <a href="#">/ Image License Info</a>
+                <a href="#">/ Instructions</a>
+                <a href="#">/ Changelog</a>
+                <a href="#">/ Style Guide</a>
+            </div>
+        </div>
 
     </footer>
 </body>
