--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <a href="#">© All rights reserved.</a>
                 <a href="#">Sumit Hegde</a>
                 <a href="#">. Powered by</a>
-                <a>Webflow</a>
+                <a href="#">Webflow</a>
             </div>
             <div>
                 <a href="#">/ Image License Info</a>
